--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Specify filepatterns you want git to ignore.
 
-RPICanDriver/bin/
-RPICanDriver/debug/
-RPICanDriver/obj/
+RPICanDriver/bin/*
+RPICanDriver/debug/*
+RPICanDriver/obj/*
