--- a/Mplab/AGV_Driver_V1.X/nbproject/Makefile-genesis.properties
+++ b/Mplab/AGV_Driver_V1.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,10 @@
 #
-#Thu Oct 29 13:13:38 CET 2020
+#Mon Nov 02 13:43:37 CET 2020
+default.Pack.dfplocation=D\:\\Programs\\Microchip\\packs\\Microchip\\dsPIC33E-GM-GP-MC-GU-MU_DFP\\1.1.33
+default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=3de759bc6af06f5ee7453ec146192402
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc16\\v1.60\\bin
+configurations-xml=f613fb6e518ab759e4e5e22037bc2afd
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
 default.languagetoolchain.version=1.60
-default.Pack.dfplocation=/home/samsam/.mchp_packs/Microchip/dsPIC33E-GM-GP-MC-GU-MU_DFP/1.1.33
-default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=300f2067f499e9e7c7fedace3cbebf24
+host.platform=windows
 conf.ids=default
-default.languagetoolchain.dir=/opt/microchip/xc16/v1.60/bin
-host.id=5ljv-bt84-7
-configurations-xml=44e1516f5086c308a4532cd1c345373d
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
-proj.dir=/media/samsam/Data/Projet_Smart_Factory/AGV_Driver/Mplab/AGV_Driver_V1.X
-host.platform=linux
